Add comments for each step

--- a/covid.ipynb
+++ b/covid.ipynb
@@ -10,17 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
+   "version": "3.7.4-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.1 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "7812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -38,22 +34,37 @@
     "from sqlalchemy import create_engine\n",
     "from datetime import datetime\n",
     "\n",
+    "#Bring Data through URL provided\n",
     "url = 'https://health.data.ny.gov/api/views/xdss-u53e/rows.json?accessType=DOWNLOAD'\n",
     "content = requests.get(url).content\n",
     "data = json.loads(content)\n",
     "\n",
+    "#Creating Dataframe through data extracted\n",
     "df = pd.DataFrame(data[\"data\"])\n",
+    "\n",
+    "# Adding Today's date in Dataframe\n",
     "df[\"load_date\"] = datetime.now()\n",
+    "\n",
+    "# Adding another County column, with removing spaces and period for better table naming \"New York\", \"St. Lawrence\"\n",
     "df[\"county\"] = df[9].str.replace(\" \", \"\").str.replace(\".\", \"\")\n",
+    "\n",
+    "#Droping extra columns from Dataframe\n",
     "df.drop(range(0, 8), axis=1, inplace=True)\n",
+    "\n",
+    "#Adding column names\n",
     "df.columns = ['test_date', 'countyname',\n",
     "              'new_positives', 'cumulative_number_of_positives', 'total_number_of_tests', 'cumulative_number_of_tests', 'load_date', 'county']\n",
+    "\n",
+    "#Droping default countyname field as it is not required              \n",
     "df.drop('countyname', axis=1, inplace=True)\n",
     "\n",
+    "#Making unique counties for table creation and loop\n",
     "countyNames = df[\"county\"].unique().tolist()\n",
     "\n",
+    "#Create engine for in-memory db\n",
     "engine = create_engine('sqlite://', echo=False)\n",
     "\n",
+    "#Loop to create table and insert data into it\n",
     "for row in countyNames:\n",
     "    data = df.loc[df[\"county\"] == row]\n",
     "    data.to_sql(row, con=engine)\n",
@@ -396,7 +407,8 @@
        " ('2021-01-19T00:00:00', '78163', 'NewYork'),\n",
        " ('2021-01-20T00:00:00', '78880', 'NewYork'),\n",
        " ('2021-01-21T00:00:00', '79812', 'NewYork'),\n",
-       " ('2021-01-22T00:00:00', '80668', 'NewYork')]"
+       " ('2021-01-22T00:00:00', '80668', 'NewYork'),\n",
+       " ('2021-01-23T00:00:00', '81482', 'NewYork')]"
       ]
      },
      "metadata": {},
@@ -404,6 +416,7 @@
     }
    ],
    "source": [
+    "#Example of running data\n",
     "engine.execute(\"SELECT test_date, cumulative_number_of_positives,county FROM NewYork\").fetchall()"
    ]
   },
