--- a/covid.ipynb
+++ b/covid.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,13 +67,12 @@
     "#Loop to create table and insert data into it\n",
     "for row in countyNames:\n",
     "    data = df.loc[df[\"county\"] == row]\n",
-    "    data.to_sql(row, con=engine)\n",
-    "\n"
+    "    data.to_sql(row, con=engine)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +87,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 8
     }
    ],
    "source": [
@@ -98,22 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[(0, '2020-03-01T00:00:00', '0', '0', '0', '0', '2021-01-24 11:02:16.121191', 'Albany'),\n",
-       " (1, '2020-03-02T00:00:00', '0', '0', '0', '0', '2021-01-24 11:02:16.121191', 'Albany'),\n",
-       " (2, '2020-03-03T00:00:00', '0', '0', '0', '0', '2021-01-24 11:02:16.121191', 'Albany'),\n",
-       " (3, '2020-03-04T00:00:00', '0', '0', '0', '0', '2021-01-24 11:02:16.121191', 'Albany'),\n",
-       " (4, '2020-03-05T00:00:00', '0', '0', '3', '3', '2021-01-24 11:02:16.121191', 'Albany')]"
+       "[(0, '2020-03-01T00:00:00', '0', '0', '0', '0', '2021-01-24 11:16:42.282559', 'Albany'),\n",
+       " (1, '2020-03-02T00:00:00', '0', '0', '0', '0', '2021-01-24 11:16:42.282559', 'Albany'),\n",
+       " (2, '2020-03-03T00:00:00', '0', '0', '0', '0', '2021-01-24 11:16:42.282559', 'Albany'),\n",
+       " (3, '2020-03-04T00:00:00', '0', '0', '0', '0', '2021-01-24 11:16:42.282559', 'Albany'),\n",
+       " (4, '2020-03-05T00:00:00', '0', '0', '3', '3', '2021-01-24 11:16:42.282559', 'Albany')]"
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 9
     }
    ],
    "source": [
